kubernetes/nginx-examples/nginx-ingress/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: my-nginx
