kubernetes/nginx-examples/nginx-ingress/nginx-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local.foo.bar
    http:
      paths:
      - path: /foo
        backend:
          serviceName: my-nginx
          servicePort: 80
